--- a/packages/mcu-private-site/package.json
+++ b/packages/mcu-private-site/package.json
@@ -10,18 +10,23 @@
         "serve": "gatsby serve"
     },
     "dependencies": {
+        "firebase": "^8.9.1",
         "gatsby": "^3.9.0",
-        "polished": "^4.1.3",
-        "react": "^17.0.1",
-        "react-dom": "^17.0.1",
         "gatsby-plugin-sharp": "^3.9.0",
         "gatsby-plugin-ts-config": "^1.1.5",
         "gatsby-source-filesystem": "^3.9.0",
         "gatsby-transformer-json": "^3.9.0",
-        "gatsby-transformer-sharp": "^3.9.0"
+        "gatsby-transformer-sharp": "^3.9.0",
+        "polished": "^4.1.3",
+        "react": "^17.0.1",
+        "react-dom": "^17.0.1",
+        "react-redux": "^7.2.4",
+        "react-redux-firebase": "^3.10.0",
+        "redux": "^4.1.1",
+        "redux-saga": "^1.1.3",
+        "redux-thunk": "^2.3.0"
     },
     "devDependencies": {
-        "typescript": "^4.3.5",
         "@types/react-helmet": "^6.1.2",
         "@typescript-eslint/eslint-plugin": "^4.28.4",
         "@typescript-eslint/parser": "^4.28.4",
@@ -31,6 +36,7 @@
         "eslint-plugin-node": "^11.1.0",
         "eslint-plugin-promise": "^5.1.0",
         "eslint-plugin-react": "^7.24.0",
-        "prettier": "2.3.2"
+        "prettier": "2.3.2",
+        "typescript": "^4.3.5"
     }
 }
