--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   ],
   "scripts": {
     "develop": "yarn workspace mcu-public-site develop",
-    "build": "yarn workspace mcu-public-site build"
+    "build": "yarn workspace mcu-public-site build",
+    "clean": "yarn workspace mcu-public-site clean && yarn workspace mcu-private-site clean"
   },
   "husky": {
     "hooks": {
