--- a/packages/mcu-marketplace-site/package.json
+++ b/packages/mcu-marketplace-site/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "mcu-private-site",
+    "name": "mcu-marketplace-site",
     "version": "1.0.0",
-    "main": "index.js",
+    "main": "build",
     "license": "MIT",
     "scripts": {
         "develop": "gatsby develop",
