--- a/packages/mcu-ui-kit/tsconfig.json
+++ b/packages/mcu-ui-kit/tsconfig.json
@@ -1,14 +1,14 @@
 {
   "compilerOptions": {
     "outDir": "build",
-    "module": "ES6",
+    "module": "commonjs",
     "target": "es5",
     "lib": ["es5", "es6", "es7", "es2017", "dom"],
     "types": ["react", "jest", "node"],
     "skipLibCheck": true,
     "sourceMap": true,
     "allowJs": false,
-    "jsx": "react",
+    "jsx": "react-jsx",
     "moduleResolution": "node",
     "rootDirs": ["src", ".storybook"],
     "baseUrl": "./",
