fix(fix firebase config): fix

--- a/firebase.json
+++ b/firebase.json
@@ -11,6 +11,7 @@
     "indexes": "firestore.indexes.json"
   },
   "hosting": {
+    "predeploy": "yarn run build",
     "public": "packages/mcu-public-site/public",
     "ignore": [
       "firebase.json",
