--- a/packages/mcu-private-site/package.json
+++ b/packages/mcu-private-site/package.json
@@ -17,6 +17,7 @@
         "gatsby-source-filesystem": "^3.9.0",
         "gatsby-transformer-json": "^3.9.0",
         "gatsby-transformer-sharp": "^3.9.0",
+        "mcu-ui-kit": "*",
         "polished": "^4.1.3",
         "react": "^17.0.1",
         "react-dom": "^17.0.1",
@@ -24,8 +25,7 @@
         "react-redux-firebase": "^3.10.0",
         "redux": "^4.1.1",
         "redux-saga": "^1.1.3",
-        "redux-thunk": "^2.3.0",
-        "mcu-ui-kit": "*"
+        "redux-thunk": "^2.3.0"
     },
     "devDependencies": {
         "@types/react-helmet": "^6.1.2",
