--- a/packages/mcu-ui-kit/package.json
+++ b/packages/mcu-ui-kit/package.json
@@ -25,12 +25,15 @@
     "@types/react-test-renderer": "^17.0.1",
     "@types/styled-components": "^5.1.12",
     "@typescript-eslint/eslint-plugin": "^4.29.2",
+    "@typescript-eslint/parser": "^4.31.2",
     "babel-loader": "^8.2.2",
     "cache-loader": "^4.1.0",
+    "copy-webpack-plugin": "^9.0.1",
     "eslint": "^5.16.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^3.4.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.21.5",
     "plop": "^2.7.4",
     "prettier": "^2.3.2",
@@ -40,7 +43,11 @@
     "stylelint-config-styled-components": "^0.1.1",
     "stylelint-prettier": "^1.2.0",
     "stylelint-processor-styled-components": "^1.10.0",
-    "ts-loader": "8.3.0"
+    "ts-loader": "8.3.0",
+    "tsconfig-paths-webpack-plugin": "^3.5.1",
+    "webpack": "^5.54.0",
+    "webpack-cli": "^4.8.0",
+    "eslint-plugin-react-hooks": "^4.2.0"
   },
   "dependencies": {
     "@ant-design/colors": "^6.0.0",
@@ -90,17 +97,18 @@
   },
   "scripts": {
     "clean": "rimraf build",
-    "compile": "yarn run clean && tsc && yarn run copy-assets",
+    "build": "yarn run clean && webpack --config webpack.config.js",
     "test": "jest",
-    "copy-assets": "cp -r  src/assets build/assets",
     "coverage": "jest --coverage",
     "lint": "eslint .",
     "lint-fix": "eslint . --fix",
     "lint:css": "stylelint './src/components/**/styled.tsx'",
+    "prettier": "prettier 'src/**/*.tsx'",
+    "prettier:fix": "prettier --write 'src/**/*.tsx'",
     "generate": "plop --plopfile ./.plop/plop.config.js",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
-    "prepublishOnly": "yarn run clean && yarn run compile",
+    "prepublishOnly": "yarn run clean && yarn run build",
     "release": "standard-version"
   }
 }
