--- a/packages/mcu-ui-kit/package.json
+++ b/packages/mcu-ui-kit/package.json
@@ -1,10 +1,10 @@
 {
   "name": "mcu-ui-kit",
   "version": "1.0.0",
-  "main": "build",
+  "main": "src",
   "license": "MIT",
   "files": [
-    "build"
+    "src"
   ],
   "devDependencies": {
     "@babel/core": "^7.15.0",
@@ -35,6 +35,7 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "plop": "^2.7.4",
     "prettier": "^2.3.2",
     "stylelint": "^13.13.1",
@@ -43,11 +44,8 @@
     "stylelint-config-styled-components": "^0.1.1",
     "stylelint-prettier": "^1.2.0",
     "stylelint-processor-styled-components": "^1.10.0",
-    "ts-loader": "8.3.0",
-    "tsconfig-paths-webpack-plugin": "^3.5.1",
-    "webpack": "^5.54.0",
-    "webpack-cli": "^4.8.0",
-    "eslint-plugin-react-hooks": "^4.2.0"
+    "ts-loader": "8.3.0"
+
   },
   "dependencies": {
     "@ant-design/colors": "^6.0.0",
@@ -55,6 +53,7 @@
     "@artsy/fresnel": "^3.0.1",
     "antd": "^4.16.13",
     "framer-motion": "^2.2.0",
+    "mini-css-extract-plugin": "^2.3.0",
     "polished": "^3.4.1",
     "react": "^17.0.2",
     "react-custom-scrollbars": "^4.2.1",
