--- a/firebase.json
+++ b/firebase.json
@@ -1,10 +1,7 @@
 {
   "functions": {
     "source": "packages/mcu-backend",
-    "predeploy": [
-      "yarn --prefix \"$RESOURCE_DIR\" run lint",
-      "yarn --prefix \"$RESOURCE_DIR\" run build"
-    ]
+    "runtime": "nodejs14"
   },
   "firestore": {
     "rules": "firestore.rules",
