--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "develop": "yarn workspace mcu-public-site develop",
     "clean": "yarn workspace mcu-public-site clean && yarn workspace mcu-private-site clean",
     "build": "yarn run clean && yarn workspace mcu-public-site build",
+    "build:functions": "yarn workspace mcu-backend build",
     "serve": "yarn workspace mcu-public-site serve"
   },
   "husky": {
